--- a/main.html
+++ b/main.html
@@ -8,7 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main-container">
+		<img src="https://images.unsplash.com/photo-1708741163431-7ac8fd4c25d4?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="tree-image" />
+		<h1>Pricing Card</h1>
+		<p>Price: Rs.200</p>
+		<p>Description: Lorem ipsum dolor sit amet, consecteture adipiscing elit.</p>
+		<button>Buy Now</button>
+	</div>
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
